--- a/style2.css
+++ b/style2.css
@@ -11,11 +11,13 @@ div.intro {
 width:1040px;
 margin-left: 30px;
 margin-right: auto;
+font-size: 18px;
 }
 
 div.members {
 width:850px;
 margin-left: 100px;
+font-size: 18px;
 }
 
 div.project {
